<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movie.NewMovieFragment"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/backgroundLayout">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/newmovie_title"
        android:textColor="@color/white"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        android:paddingTop="50dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_name"
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:paddingTop="@dimen/newmoviefields_padding"
        android:paddingBottom="@dimen/newmoviefields_padding"
        android:paddingLeft="@dimen/newmoviefields_padding"
        android:paddingRight="@dimen/newmoviefields_padding"
        android:textColorHint="@color/white"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_textfield_createnewmovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardLayout"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_category"
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/newmoviefields_padding"
        android:paddingBottom="@dimen/newmoviefields_padding"
        android:paddingLeft="@dimen/newmoviefields_padding"
        android:paddingRight="@dimen/newmoviefields_padding"
        android:hint="@string/category_title"
        android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/category_textfield_createnewmovie"
            android:layout_width="match_parent"
            android:backgroundTint="@color/cardLayout"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_description"
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/newmoviefields_padding"
        android:paddingBottom="@dimen/newmoviefields_padding"
        android:paddingLeft="@dimen/newmoviefields_padding"
        android:paddingRight="@dimen/newmoviefields_padding"
        android:hint="@string/description"
        android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_textfield_createnewmovie"
            android:layout_width="match_parent"
            android:backgroundTint="@color/cardLayout"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_calification"
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/newmoviefields_padding"
        android:paddingBottom="@dimen/newmoviefields_padding"
        android:paddingLeft="@dimen/newmoviefields_padding"
        android:paddingRight="@dimen/newmoviefields_padding"
        android:hint="@string/calification"
        android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/calification_textfield_createnewmovie"
            android:layout_width="match_parent"
            android:backgroundTint="@color/cardLayout"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_createnewmovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textColor="@color/black"
        android:backgroundTint="@color/buttonColor"/>
</LinearLayout>