<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movie.BillboardFragment"
    android:background="@color/backgroundLayout">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/billboard_title"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/movie_1_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/movie_1_card"
        android:layout_width="@dimen/card_width"
        android:layout_height="@dimen/card_height"
        android:backgroundTint="@color/cardLayout"
        android:elevation="@dimen/card_elevation"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardMaxElevation="@dimen/card_elevation"
        app:layout_constraintBottom_toBottomOf="@id/movie_2_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="@dimen/width_image_views"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/padding_image_views"
                android:paddingRight="@dimen/padding_image_views"
                android:src="@drawable/star_wars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/starwars_title"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    android:textColor="@color/calification"
                    android:text="@string/score_1" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/movie_2_card"
        android:layout_width="@dimen/card_width"
        android:layout_height="@dimen/card_height"
        android:backgroundTint="@color/cardLayout"
        android:elevation="@dimen/card_elevation"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardMaxElevation="@dimen/card_elevation"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_1_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="@dimen/width_image_views"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/padding_image_views"
                android:paddingRight="@dimen/padding_image_views"
                android:src="@drawable/harry_potter" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harry_tittle"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    android:textColor="@color/calification"
                    android:text="@string/score_2" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/action_to_new_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="Add new movie"
        android:src="@drawable/baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:backgroundTint="@color/buttonColor"
        app:layout_constraintVertical_bias="0.976"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="443dp" />
</androidx.constraintlayout.widget.ConstraintLayout>